Fixed some mobile layout issues.

--- a/src/Components/styles/About.css
+++ b/src/Components/styles/About.css
@@ -9,7 +9,7 @@
 }
 
 .aboutWrapper {
-  width: 50vw;
+  width: 60vw;
 }
 
 .aboutTextWrapper {
