--- a/src/Components/styles/Cards.css
+++ b/src/Components/styles/Cards.css
@@ -20,6 +20,7 @@
   margin-top: 10em;
   padding-top: 10em;
   justify-content: center;
+  /* width: 87vw; */
 }
 
 .neonSubhead {
@@ -32,7 +33,7 @@
   flex-flow: column;
   align-items: center;
   max-width: 1120px;
-  width: 50vw;
+  width: 70vw;
   margin: 2em 0 0 0 ;
 }
 
