--- a/src/Components/styles/MySection.css
+++ b/src/Components/styles/MySection.css
@@ -51,7 +51,7 @@ body {
   font-family: "neontubes";
   text-align: center;
   white-space: nowrap;
-  width: 50vw;
+  width: 60vw;
 }
 
 .frontpageContainer span {
@@ -372,5 +372,17 @@ body {
   }
   100% {
     clip: rect(131px, auto, 14px, 33px);
+  }
+}
+
+@media only screen and (min-width: 200px) {
+  .neonRandom {
+    font-size: 1.25em;
+  }
+  .neonHead {
+    font-size: 2.5em;
+  }
+  .neonSubhead2 {
+    font-size: 2em;
   }
 }
